--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,9 @@ dependencies {
     testImplementation 'org.mockito:mockito-inline:4.1.0'
     testImplementation "androidx.arch.core:core-testing:2.2.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 }
