--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,7 @@ dependencies {
 
     // SwipeRefresh layout
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
