encrypted the token and password

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
     // Gson
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    implementation "androidx.security:security-crypto:1.1.0-alpha05"
+
     // Room
     def room_version = "2.5.1"
 
